vlib/v/checker/tests/no_pub_in_main.out
vlib/v/checker/tests/no_pub_in_main.vv:3:1: error: type alias `Integer` in module main cannot be declared public
    1 | module main
    2 |
    3 | pub type Integer = int
      | ~~~~~~~~~~~~~~~~
    4 |
    5 | pub type Float = f32 | f64
vlib/v/checker/tests/no_pub_in_main.vv:5:1: error: sum type `Float` in module main cannot be declared public
    3 | pub type Integer = int
    4 |
    5 | pub type Float = f32 | f64
      | ~~~~~~~~~~~~~~
    6 |
    7 | // Buggy ATM
vlib/v/checker/tests/no_pub_in_main.vv:10:1: error: enum `Color` in module main cannot be declared public
    8 | // pub type Fn = fn () int
    9 |
   10 | pub enum Color {
      | ~~~~~~~~~~~~~~
   11 |     red
   12 |     green
vlib/v/checker/tests/no_pub_in_main.vv:16:1: error: const in module main cannot be declared public
   14 | }
   15 |
   16 | pub const (
      | ~~~~~~~~~
   17 |     w = 'world'
   18 | )
vlib/v/checker/tests/no_pub_in_main.vv:20:1: error: function `my_fn` in module main cannot be declared public
   18 | )
   19 |
   20 | pub fn my_fn() int {
      | ~~~~~~~~~~~~~~~~~~
   21 |     return 1
   22 | }
vlib/v/checker/tests/no_pub_in_main.vv:24:1: error: function `main` cannot be declared public
   22 | }
   23 |
   24 | pub fn main() {
      | ~~~~~~~~~~~~~
   25 |     println('main')
   26 | }
vlib/v/checker/tests/no_pub_in_main.vv:28:1: error: struct `MyStruct` in module main cannot be declared public
   26 | }
   27 |
   28 | pub struct MyStruct {
      | ~~~~~~~~~~~~~~~~~~~
   29 |     field int
   30 | }
