vlib/v/checker/tests/no_pub_in_main.vv
module main

pub type Integer = int

pub type Float = f32 | f64

// Buggy ATM
// pub type Fn = fn () int

pub enum Color {
	red
	green
	blue
}

pub const (
	w = 'world'
)

pub fn my_fn() int {
	return 1
}

pub fn main() {
	println('main')
}

pub struct MyStruct {
	field int
}
